--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,9 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+small/stop_10_test.json.gz filter=lfs diff=lfs merge=lfs -text
+small/stop_10_train.json.gz filter=lfs diff=lfs merge=lfs -text
+small/stop_15_test.json.gz filter=lfs diff=lfs merge=lfs -text
+small/stop_15_train.json.gz filter=lfs diff=lfs merge=lfs -text
+small/stop_20_test.json.gz filter=lfs diff=lfs merge=lfs -text
+small/stop_20_train.json.gz filter=lfs diff=lfs merge=lfs -text
